--- a/content/publication/ofc2018.md
+++ b/content/publication/ofc2018.md
@@ -59,7 +59,7 @@ highlight = true
 # Featured image
 # Place your image in the `static/img/` folder and reference its filename below, e.g. `image = "example.jpg"`.
 [header]
-image = "ofc2018.jpeg"
+image = "ofc2018.png"
 caption = "My caption :smile:"
 
 +++
